<resources>
    <string name="app_name">projetoSMI</string>

    <string name="menu_relatorio">Relatórios</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_localizacao">Localização</string>
    <string name="menu_chamadas">Chamadas</string>
    <string name="menu_alertas">Alertas</string>
    <string name="menu_bluetooth_pair">Pareamento Bluetooth</string>
    <string name="menu_sobrenos">Sobre nós</string>

    <string name="navigation_drawer_open">Abra o navigation drawer</string>
    <string name="navigation_drawer_close">Fecha o navigation drawer</string>
    <string name="dash_reports_title">Relatórios</string>
    <string name="dash_reports_description">Consulte os dados coletados pelo dispositivo</string>
    <string name="dash_localization_title">Localização</string>
    <string name="dash_localization_description">Solicite a localização do indivíduo monitorado</string>
    <string name="dash_call_title">Chamada</string>
    <string name="dash_call_description">Efetue uma ligação ao indíviduo monitorado</string>
    <string name="dash_alarm_title">Alertas</string>
    <string name="dash_alarm_description">Configure alarmes para o dispositivo vestivel</string>
    <string name="dash_bluetooth_title">Parear Dispositivo</string>
    <string name="dash_bluetooth_description">Configure seu dispositivo vestivel com o aplicativo</string>
    <string name="dash_reports_contentDesc">Relatórios de sinais vitais coletados pelo dispositivo vestivel</string>
    <string name="dash_localization_contentDesc">Solicita a localização do usuário utilizando o dispositivo vestivel</string>
    <string name="dash_call_contentDesc">Realiza uma chamada para o número do dispositivo vestivel</string>
    <string name="dash_alarm_contentDesc">Configure alarmes para o dispositivo vestivel</string>
    <string name="dash_setup_contentDesc">Configure a aplicação com o dispositivo vestível para comunicação</string>
    <string name="add_user_error">Falha ao configurar usuário</string>
    <string name="sem_alarmes">Não há alarmes. Clique no botão + para criar um alarme</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="endereco_email">E-mail</string>
    <string name="informar_senha">Senha</string>
    <string name="btnAcessar">Acessar</string>
    <string name="acessar">Acessar</string>
    <string name="registrar">Registrar-se</string>
    <string name="esquercer_senha">Esqueceu sua senha?</string>
    <string name="nome">Nome e Sobrenome</string>
</resources>